--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,16 @@ body {
     background:#B0C4DE;
     font-family:Arial, Helvetica, sans-serif;
 }
+.assignments{
+    display: flex;
+    flex-wrap:wrap;
+}
 
 .assignment{
-    display:flex;
+    width: 22%;
     padding:10px;
     margin:10px;
+    padding:20px 10px;
     background:#98CCB6;
     border-radius: 5px;
 }
@@ -14,7 +19,9 @@ body {
 .assignment img{
     width:200px;
     margin: 10px;
-    border: 4px #FFF;
+    border: 4px solid #FFF;
+    display:block;
+    margin:auto;
 }
 .assignment img:hover {
     border: 4px dashed #F25C69;
@@ -26,6 +33,10 @@ h1 {
 }
 h1:hover {
     color: #F25C69;
+}
+
+h2{
+    text-align: center;
 }
 
 a   {
